# Inverse_Permutation

./: Assignment.md  CMakeLists.txt  Readme.md  mergeksort_report.md  results.py  runMK.sh  runON2.sh
apps/: InverseMK.cpp  InverseON2.cpp  Test.cpp
include/: InversePerm.hpp  heap.hpp
old/: heap.hpp  main  makefile  mergeksort.cpp  run4.sh  test.cpp
src/: InversePerm.cpp  heap.cpp
